Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-11208

CollectionItemsRead profile counter might be wrong in ORC scanner

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 3.2.0, Impala 3.3.0, Impala 3.4.0, Impala 3.4.1
    • Impala 4.2.0, Impala 4.1.1
    • None
    • None
    • ghx-label-8

    Description

      I ran some TPCH(30) queries locally using orc/snap/block format. The profile counter of CollectionItemsRead seems weird for me:

      - CollectionItemsRead: -1679471728382351781 (-1679471728382351781) 

      It could also be super large positive values, e.g.

      - CollectionItemsRead: 1296851974.72B (1296851974721369461) 

      Attachments

        Activity

          People

            stigahuang Quanlong Huang
            stigahuang Quanlong Huang
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: